cap nhat bai 3, 4

--- a/baitap2.html
+++ b/baitap2.html
@@ -7,13 +7,14 @@
 <body>
 <input id="inputcel" type="number">
 <button onclick="m1()" type="submit">Nhập</button>
+<p id="a"></p>
 </body>
 </html>
 <script>
     function m1() {
         let cel = document.getElementById("inputcel").value
         let fa = (cel/5)*9 + 32
-        document.write(cel+" độ C = "+fa+" độ F")
+        document.getElementById("a").innerHTML = cel+" độ C = "+fa+" độ F"
     }
 
 </script>
