--- a/baitap4.html
+++ b/baitap4.html
@@ -8,3 +8,9 @@
 
 </body>
 </html>
+<script>
+    let nhapr2 = prompt("Nhập r")
+    let radius = parseInt(nhapr2)
+    let chuvi = 2*Math.PI * radius
+    document.write("Chu vi là: " + chuvi)
+</script>
